// SPDX-License-Identifier: GPL-3.0-or-later
// SPDX-FileCopyrightText: 2021 Jared Irwin <jrairwin@sympatico.ca>
syntax = "proto3";

package Bakaneko;

message Updates {
	repeated Update update = 1;
};

message Update {
	string source      = 1;
	string name        = 2;
	string old_version = 3;
	string new_version = 4;
};